@@ -1,3 +1,7 @@
+2015-08-06  Niibe Yutaka  <gniibe@fsij.org>
+
+	* example-fsm-55/README: Updated.
+
 2015-07-31  Niibe Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 0.08.
